examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx
// E419: unresolved single effect variable in subtraction path.

fn unresolved(x: Int) -> Int with e - IO {
    x
}

fn main() -> Unit {
    unresolved(1)
    None
}
